# rangelib

./: CMakeLists.txt  README.md  changelog
examples/: Makefile  passage.c  rangeair.c  testRange.C
man/: range.1  rangelib.3
src/: nr.c  nr.h  range.c  range.h  rangelib.c  ranges.c
